--- a/app/src/main/res/layout/activity_sign_up_step1.xml
+++ b/app/src/main/res/layout/activity_sign_up_step1.xml
@@ -10,32 +10,41 @@
     android:paddingBottom="30dp"
     tools:context="com.hasbrain.usersignupinfo.SignUpStep1Activity">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_marginBottom="20dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp">
+
+        <ImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dummy_profile_picture"
+            android:layout_marginRight="10dp"
+            android:adjustViewBounds="true"/>
 
         <EditText
             android:id="@+id/et_first_name"
-            android:layout_width="0dp"
+            android:layout_toRightOf="@id/iv_avatar"
+            android:layout_width="match_parent"
             android:lines="1"
             android:maxLines="1"
             android:singleLine="true"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:hint="First name" />
 
         <EditText
             android:id="@+id/et_last_name"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
+            android:layout_toRightOf="@id/iv_avatar"
+            android:layout_below="@id/et_first_name"
             android:lines="1"
             android:maxLines="1"
             android:singleLine="true"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:hint="Last name" />
-    </LinearLayout>
+
+    </RelativeLayout>
 
     <EditText
         android:id="@+id/et_email"
